--- a/app/views/weitest/o2o.html.erb
+++ b/app/views/weitest/o2o.html.erb
@@ -48,7 +48,10 @@
       'onMenuShareQQ',
       'onMenuShareWeibo',
       'hideMenuItems',
-      'showMenuItems'
+      'showMenuItems',
+      'addCard',
+      'chooseCard',
+      'openCard'
     ]
   });
 
