cookie for remember me

--- a/app/views/admin/wshows/_menu.html.erb
+++ b/app/views/admin/wshows/_menu.html.erb
@@ -23,7 +23,7 @@
       <%= link_to '全部微秀', [:admin,:wshows] %>
     </li>
     <li class="<%= action_name.eql?('new') && 'active' %>"> 
-      <%= link_to '新建微秀', [:new,:admin,:wshow] %>
+      <%= link_to '新建微秀', '/admin/ws/new' %>
     </li>
   </ul>
 </div>
