add start time end time

--- a/app/views/admin/redpacks/_form.html.erb
+++ b/app/views/admin/redpacks/_form.html.erb
@@ -86,7 +86,63 @@
         <%= f.text_field :fail_url %>
       </div>
     </div>
- 
+
+    <div class="control-group">
+      <label class="control-label">amount</label>
+      <div class="controls">
+        <%= f.text_field :amount %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label">probability</label>
+      <div class="controls">
+        <%= f.text_field :probability %>
+      </div>
+    </div>
+    
+    <div class="control-group">
+      <label class="control-label">each_max</label>
+      <div class="controls">
+        <%= f.text_field :each_max %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label">each_num</label>
+      <div class="controls">
+        <%= f.text_field :each_num %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label">start_time</label>
+      <div class="controls">
+        <%= f.text_field :start_time %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label">end_time</label>
+      <div class="controls">
+        <%= f.text_field :end_time %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label">password</label>
+      <div class="controls">
+        <%= f.text_field :password %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label">virtual_num</label>
+      <div class="controls">
+        <%= f.text_field :virtual_num %>
+      </div>
+    </div>
+
 
     <div class="control-group">
       <label class="control-label">State</label>
