--- a/app/assets/stylesheets/redpacks.css.scss
+++ b/app/assets/stylesheets/redpacks.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the redpacks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#=require bootstrap.min.css
+#=require bootstrap-datetimepicker.min.css
+
+
