--- a/app/views/admin/redpacks/_form.html.erb
+++ b/app/views/admin/redpacks/_form.html.erb
@@ -118,9 +118,20 @@
     <div class="control-group">
       <label class="control-label">start_time</label>
       <div class="controls">
-        <%= f.text_field :start_time %>
+       
       </div>
     </div>
+
+<div class="control-group">
+                <label class="control-label">start_time</label>
+                <div class="controls input-append date form_datetime" data-date="1979-09-16T05:25:07Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input1">
+                    <input size="16" type="text" value="" readonly>
+                    <span class="add-on"><i class="icon-remove"></i></span>
+          <span class="add-on"><i class="icon-th"></i></span>
+           <%= f.text_field :start_time %>
+                </div>
+        <input type="hidden" id="dtp_input1" value="" /><br/>
+            </div>
 
     <div class="control-group">
       <label class="control-label">end_time</label>
@@ -143,45 +154,12 @@
       </div>
     </div>
 
-<div class="container">
-    <form action="" class="form-horizontal">
-        <fieldset>
-            <legend>Test</legend>
-            <div class="control-group">
-                <label class="control-label">DateTime Picking</label>
-                <div class="controls input-append date form_datetime" data-date="1979-09-16T05:25:07Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input1">
-                    <input size="16" type="text" value="" readonly>
-                    <span class="add-on"><i class="icon-remove"></i></span>
-          <span class="add-on"><i class="icon-th"></i></span>
-                </div>
-        <input type="hidden" id="dtp_input1" value="" /><br/>
-            </div>
-      <div class="control-group">
-                <label class="control-label">Date Picking</label>
-                <div class="controls input-append date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
-                    <input size="16" type="text" value="" readonly>
-                    <span class="add-on"><i class="icon-remove"></i></span>
-          <span class="add-on"><i class="icon-th"></i></span>
-                </div>
-        <input type="hidden" id="dtp_input2" value="" /><br/>
-            </div>
-      <div class="control-group">
-                <label class="control-label">Time Picking</label>
-                <div class="controls input-append date form_time" data-date="" data-date-format="hh:ii" data-link-field="dtp_input3" data-link-format="hh:ii">
-                    <input size="16" type="text" value="" readonly>
-                    <span class="add-on"><i class="icon-remove"></i></span>
-          <span class="add-on"><i class="icon-th"></i></span>
-                </div>
-        <input type="hidden" id="dtp_input3" value="" /><br/>
-            </div>
-        </fieldset>
-    </form>
-</div>
+
 
 
 <script type="text/javascript">
     $('.form_datetime').datetimepicker({
-        //language:  'fr',
+        language:  'zh-CN',
         weekStart: 1,
         todayBtn:  1,
     autoclose: 1,
@@ -189,27 +167,6 @@
     startView: 2,
     forceParse: 0,
         showMeridian: 1
-    });
-  $('.form_date').datetimepicker({
-        language:  'fr',
-        weekStart: 1,
-        todayBtn:  1,
-    autoclose: 1,
-    todayHighlight: 1,
-    startView: 2,
-    minView: 2,
-    forceParse: 0
-    });
-  $('.form_time').datetimepicker({
-        language:  'fr',
-        weekStart: 1,
-        todayBtn:  1,
-    autoclose: 1,
-    todayHighlight: 1,
-    startView: 1,
-    minView: 0,
-    maxView: 1,
-    forceParse: 0
     });
 </script>
 
