--- a/app/views/admin/redpacks/_form.html.erb
+++ b/app/views/admin/redpacks/_form.html.erb
@@ -124,7 +124,7 @@
 
 <div class="control-group">
                 <label class="control-label">start_time</label>
-                <div class="controls input-append date form_datetime" data-date="1979-09-16T05:25:07Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input1">
+               <div class="controls input-append date form_datetime"  data-date-format="yyyy-mm-yy hh:ii:ss" data-link-field="dtp_input1">
                     
                     <%= f.text_field :start_time %>
                     <span class="add-on"><i class="icon-remove"></i></span>
@@ -136,9 +136,13 @@
 
     <div class="control-group">
       <label class="control-label">end_time</label>
-      <div class="controls">
+               <div class="controls input-append date form_datetime"  data-date-format="yyyy-mm-yy hh:ii:ss" data-link-field="dtp_input2">
+      
         <%= f.text_field :end_time %>
+        <span class="add-on"><i class="icon-remove"></i></span>
+          <span class="add-on"><i class="icon-th"></i></span>
       </div>
+      <input type="hidden" id="dtp_input1" value="" /><br/>
     </div>
 
     <div class="control-group">
