--- a/app/views/admin/redpacks/_form.html.erb
+++ b/app/views/admin/redpacks/_form.html.erb
@@ -115,16 +115,11 @@
       </div>
     </div>
 
-    <div class="control-group">
-      <label class="control-label">start_time</label>
-      <div class="controls">
-       
-      </div>
-    </div>
+
 
 <div class="control-group">
                 <label class="control-label">start_time</label>
-               <div class="controls input-append date form_datetime"  data-date-format="yyyy-mm-yy hh:ii:ss" data-link-field="dtp_input1">
+               <div class="controls input-append date form_datetime"  data-date-format="yyyy-mm-dd hh:ii:ss" data-link-field="dtp_input1">
                     
                     <%= f.text_field :start_time %>
                     <span class="add-on"><i class="icon-remove"></i></span>
@@ -136,13 +131,13 @@
 
     <div class="control-group">
       <label class="control-label">end_time</label>
-               <div class="controls input-append date form_datetime"  data-date-format="yyyy-mm-yy hh:ii:ss" data-link-field="dtp_input2">
+               <div class="controls input-append date form_datetime"  data-date-format="yyyy-mm-dd hh:ii:ss" data-link-field="dtp_input2">
       
         <%= f.text_field :end_time %>
         <span class="add-on"><i class="icon-remove"></i></span>
           <span class="add-on"><i class="icon-th"></i></span>
       </div>
-      <input type="hidden" id="dtp_input1" value="" /><br/>
+      <input type="hidden" id="dtp_input2" value="" /><br/>
     </div>
 
     <div class="control-group">
