--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -61,7 +61,7 @@
           
 
           <li class="<%= controller_name.in?(['images']) ? 'active' : ''%>">
-            <%= link_to '图片管理', [:admin,:images] %>
+            <%= link_to '素材管理', [:admin,:images] %>
           </li>
         </ul>
       </div><!--/.nav-collapse -->
