--- a/app/views/admin/wshows/index.html.erb
+++ b/app/views/admin/wshows/index.html.erb
@@ -6,7 +6,6 @@
       <th>人气</th>
       <th>微信好友分享</th>
       <th>朋友圈分享</th>
-      <th width="15%">转发统计</th>
       <th>微信链接</th>
       <th width="5%">状态</th>
       <th width="15%">背景</th>
@@ -26,8 +25,7 @@
         <td><%= c.pv %></td>
         <td><%= c.share_count("hy") %></td>
         <td><%= c.share_count("pyq") %></td>
-        <td></td>
-        <td><%= c.url %></td>
+        <td><img src="<%= c.get_qr_img %>" width='100px'></td>
         <td> 
           <%= link_to [:update_state,:admin,c], remote: true, class: 'ajax',  
             data: {confirm: 'are you sure?'} do %>
