--- a/app/views/admin/bgames/_form.html.erb
+++ b/app/views/admin/bgames/_form.html.erb
@@ -10,7 +10,7 @@
     <div class="control-group">
       <label class="control-label">ibeacon id</label>
       <div class="controls">
-        <%= f.text_field :beaconid, required: true %>
+        <%= f.select :beaconid, Ibeacon.get_ibeacons_for_select, required: true %>    
       </div>
     </div>
 
