--- a/app/views/admin/materials/_menu.html.erb
+++ b/app/views/admin/materials/_menu.html.erb
@@ -19,6 +19,9 @@
 <div class="well sidebar-nav">
   <ul class="nav nav-list">
     <li class="nav-header">素材管理</li>
+    <li class="<%= action_name.in?(['index','edit']) && 'active' %>">
+      <%= link_to '落地应用', '/admin/materials?rrr=1' %>
+    </li>
     <li class="<%= action_name.in?(['index','edit']) && 'active' %>"> 
       <%= link_to '全部素材', [:admin,:materials] %>
     </li>
