--- a/app/views/admin/redpacks/_form.html.erb
+++ b/app/views/admin/redpacks/_form.html.erb
@@ -1,187 +1,218 @@
 <%= form_for [:admin, @redpack] do |f| %>
 
-    <div class="control-group">
-      <label class="control-label">sender_name</label>
-      <div class="controls">
-        <%= f.text_field :sender_name, required: true, style: "width:500px" %>
-      </div>
-    </div>
+<div class="control-group">
+  <label class="control-label">sender_name</label>
+  <div class="controls">
+    <%= f.text_field :sender_name, required: true, style: "width:500px" %>
+  </div>
+</div>
 
-    <div class="control-group">
-      <label class="control-label">wishing</label>
-      <div class="controls">
-        <%= f.text_field :wishing, style: "width:500px" %>
-      </div>
-    </div>
-  
-    <div class="control-group">
-      <label class="control-label">action_title</label>
-      <div class="controls">
-        <%= f.text_field :action_title %>
-      </div>
-    </div> 
+<div class="control-group">
+  <label class="control-label">wishing</label>
+  <div class="controls">
+    <%= f.text_field :wishing, style: "width:500px" %>
+  </div>
+</div>
 
-    <div class="control-group">
-      <label class="control-label">action_remark</label>
-      <div class="controls">
-        <%= f.text_field :action_remark %>
-      </div>
-    </div>
-    
+<div class="control-group">
+  <label class="control-label">action_title</label>
+  <div class="controls">
+    <%= f.text_field :action_title %>
+  </div>
+</div> 
 
-    <div class="control-group">
-      <label class="control-label">ibeacon</label>
-      <div class="controls">
-        <%= f.text_field :beaconid, required: true %>
-      </div>
-    </div>
-
-
-    <div class="control-group">
-      <label class="control-label">store</label>
-      <div class="controls">
-        <%= f.text_field :store, required: true %>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <label class="control-label">app id</label>
-      <div class="controls">
-        <%= f.text_field :app_id %>
-      </div>
-    </div>
-     
-
-    <div class="control-group">
-      <label class="control-label">shop_id</label>
-      <div class="controls">
-        <%= f.text_field :shop_id %>
-      </div>
-    </div>
-
-   <div class="control-group">
-      <label class="control-label">min</label>
-      <div class="controls">
-        <%= f.text_field :min %>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <label class="control-label">max</label>
-      <div class="controls">
-        <%= f.text_field :max %>
-      </div>
-    </div>
-   
-    <div class="control-group">
-      <label class="control-label">suc url</label>
-      <div class="controls">
-        <%= f.text_field :suc_url %>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <label class="control-label">fail url</label>
-      <div class="controls">
-        <%= f.text_field :fail_url %>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <label class="control-label">amount</label>
-      <div class="controls">
-        <%= f.text_field :amount %>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <label class="control-label">probability</label>
-      <div class="controls">
-        <%= f.text_field :probability %>
-      </div>
-    </div>
-    
-    <div class="control-group">
-      <label class="control-label">each_max</label>
-      <div class="controls">
-        <%= f.text_field :each_max %>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <label class="control-label">each_num</label>
-      <div class="controls">
-        <%= f.text_field :each_num %>
-      </div>
-    </div>
-
+<div class="control-group">
+  <label class="control-label">action_remark</label>
+  <div class="controls">
+    <%= f.text_field :action_remark %>
+  </div>
+</div>
 
 
 <div class="control-group">
-                <label class="control-label">start_time</label>
-               <div class="controls input-append date form_datetime"  data-date-format="yyyy-mm-dd hh:ii:ss" data-link-field="dtp_input1">
-                    
-                    <%= f.text_field :start_time %>
-                    <span class="add-on"><i class="icon-remove"></i></span>
-          <span class="add-on"><i class="icon-th"></i></span>
-
-                </div>
-        <input type="hidden" id="dtp_input1" value="" /><br/>
-            </div>
-
-    <div class="control-group">
-      <label class="control-label">end_time</label>
-               <div class="controls input-append date form_datetime"  data-date-format="yyyy-mm-dd hh:ii:ss" data-link-field="dtp_input2">
-      
-        <%= f.text_field :end_time %>
-        <span class="add-on"><i class="icon-remove"></i></span>
-          <span class="add-on"><i class="icon-th"></i></span>
-      </div>
-      <input type="hidden" id="dtp_input2" value="" /><br/>
-    </div>
-
-    <div class="control-group">
-      <label class="control-label">password</label>
-      <div class="controls">
-        <%= f.text_field :password %>
-      </div>
-    </div>
-
-    <div class="control-group">
-      <label class="control-label">virtual_num</label>
-      <div class="controls">
-        <%= f.text_field :virtual_num %>
-      </div>
-    </div>
+  <label class="control-label">ibeacon</label>
+  <div class="controls">
+    <%= f.text_field :beaconid, required: true %>
+  </div>
+</div>
 
 
+<div class="control-group">
+  <label class="control-label">store</label>
+  <div class="controls">
+    <%= f.text_field :store, required: true %>
+  </div>
+</div>
 
+<div class="control-group">
+  <label class="control-label">app id</label>
+  <div class="controls">
+    <%= f.text_field :app_id %>
+  </div>
+</div>
+
+
+<div class="control-group">
+  <label class="control-label">shop_id</label>
+  <div class="controls">
+    <%= f.text_field :shop_id %>
+  </div>
+</div>
+
+<div class="control-group">
+  <label class="control-label">suc url</label>
+  <div class="controls">
+    <%= f.text_field :suc_url %>
+  </div>
+</div>
+
+<div class="control-group">
+  <label class="control-label">fail url</label>
+  <div class="controls">
+    <%= f.text_field :fail_url %>
+  </div>
+</div>
+
+<div class="control-group">
+  <label class="control-label">amount</label>
+  <div class="controls">
+    <%= f.text_field :amount %>
+  </div>
+</div>
+
+<div class="control-group">
+  <label class="control-label">start_time</label>
+  <div class="controls input-append date form_datetime"  data-date-format="yyyy-mm-dd hh:ii:ss" data-link-field="dtp_input1">
+
+    <%= f.text_field :start_time %>
+    <span class="add-on"><i class="icon-remove"></i></span>
+    <span class="add-on"><i class="icon-th"></i></span>
+
+  </div>
+  <input type="hidden" id="dtp_input1" value="" /><br/>
+</div>
+
+<div class="control-group">
+  <label class="control-label">end_time</label>
+  <div class="controls input-append date form_datetime"  data-date-format="yyyy-mm-dd hh:ii:ss" data-link-field="dtp_input2">
+
+    <%= f.text_field :end_time %>
+    <span class="add-on"><i class="icon-remove"></i></span>
+    <span class="add-on"><i class="icon-th"></i></span>
+  </div>
+  <input type="hidden" id="dtp_input2" value="" /><br/>
+</div>
+
+
+<div class="control-group">
+  <label class="control-label">State</label>
+  <div class="controls">
+    <%= f.select :state, Admin::RedpacksController::State, required: true %>
+  </div>
+</div>
+
+<div class="control-group">
+  <label class="control-label"></label>
+  <div class="controls">
+    <%= f.submit %>
+  </div>
+</div>
+<% end %>
 
 <script type="text/javascript">
-    $('.form_datetime').datetimepicker({
-        language:  'zh-CN',
-        weekStart: 1,
-        todayBtn:  1,
+  $('.form_datetime').datetimepicker({
+    language:  'zh-CN',
+    weekStart: 1,
+    todayBtn:  1,
     autoclose: 1,
     todayHighlight: 1,
     startView: 2,
     forceParse: 0,
-        showMeridian: 1
-    });
+    showMeridian: 1
+  });
 </script>
 
-    <div class="control-group">
-      <label class="control-label">State</label>
-      <div class="controls">
-        <%= f.select :state, Admin::RedpacksController::State, required: true %>
-      </div>
-    </div>
+<div class="form-group">
+  <%= link_to  "/admin/redpacks/#{@redpack.id}/redpack_times/new", class: 'btn btn-primary btn-sm', id: 'a_obj' do %>
+  <span class="glyphicon glyphicon-plus"></span>新建redpack_time
+  <% end %>
 
-    <div class="control-group">
-      <label class="control-label"></label>
-      <div class="controls">
-        <%= f.submit %>
-      </div>
-    </div>
+  <table class="table">
+    <tr>
+      <th>ID</th>
+      <th>start_time</th>
+      <th>end_time</th>
+      <th>frequency</th>
+      <th>min</th>
+      <th>max</th>
+      <th>store</th>
+      <th>state</th>
+      <th>probability</th>
+      <th>operate</th>
+    </tr>
+    <% @redpack.get_redpack_times.each do |t|%>
+    <tr>
+      <td><%= t.id %></td>
+      <td><%= t.start_time%></td>
+      <td><%= t.end_time%></td>
+      <td><%= t.frequency%></td>
+      <td><%= t.min%></td>
+      <td><%= t.max%></td>
+      <td><%= t.store%></td>
+      <td><%= t.state%></td>
+      <td><%= t.probability%></td>
+      <td> <%= link_to '编辑', [:edit, :admin, @redpack, t]%>|<%= link_to '删除', [:admin, @redpack, t], :title=>"删除",:method=>"delete", :confirm=>"确定删除吗?" %></td>
+    </tr>
+    <%end%>
+  </table>  
+</div>
 
-<% end %>
+<div class="form-group">
+  <%= link_to  "/admin/redpacks/#{@redpack.id}/redpack_values/new", class: 'btn btn-primary btn-sm', id: 'a_obj' do %>
+  <span class="glyphicon glyphicon-plus"></span>新建redpack_value
+  <% end %>
+
+  <table class="table">
+    <tr>
+      <th>ID</th>
+      <th>money</th>
+      <th>operate</th>
+    </tr>
+    <% @redpack.get_redpack_values.each do |t|%>
+    <tr>
+      <td><%= t.id %></td>
+      <td><%= t.money%></td>
+      <td> <%= link_to '编辑', [:edit, :admin, @redpack, t]%>|<%= link_to '删除', [:admin, @redpack, t], :title=>"删除",:method=>"delete", :confirm=>"确定删除吗?" %></td>
+    </tr>
+    <%end%>
+  </table>  
+</div>
+
+<div class="form-group">
+  <%= link_to  "/admin/redpacks/#{@redpack.id}/redpack_people/new", class: 'btn btn-primary btn-sm', id: 'a_obj' do %>
+  <span class="glyphicon glyphicon-plus"></span>新建redpack_person
+  <% end %>
+
+  <table class="table">
+    <tr>
+      <th>ID</th>
+      <th>name</th>
+      <th>time_id</th>
+      <th>value_id</th>
+      <th>operate</th>
+    </tr>
+    <% @redpack.get_redpack_people.each do |t|%>
+    <tr>
+      <td><%= t.id %></td>
+      <td><%= t.name%></td>
+      <th><%= t.time_id%></th>
+      <th><%= t.value_id%></th>
+      <td> <%= link_to '编辑', [:edit, :admin, @redpack, t]%>|<%= link_to '删除', [:admin, @redpack, t], :title=>"删除",:method=>"delete", :confirm=>"确定删除吗?" %></td>
+    </tr>
+    <%end%>
+  </table>  
+</div>
+
+
+
+
