--- a/app/views/admin/redpack_times/_form.html.erb
+++ b/app/views/admin/redpack_times/_form.html.erb
@@ -1,6 +1,7 @@
-<h3 style='margin-top:0px;'><%= action_name.in?(['new','create']) ? '新建' : '编辑' %>@redpack_time</h3>
+<h3 style='margin-top:0px;text-align: center;'><%= action_name.in?(['new','create']) ? '新建' : '编辑' %>redpack_time</h3>
 <hr/ style='margin-top:0px;'>
-
+<div class="row">
+  <div class="span6 offset3">
     <%= form_for [:admin, @redpack, @redpack_time] do |f| %>
     <div class="control-group">
       <label class="control-label">start_time</label>
@@ -38,8 +39,8 @@
     <%= f.text_field :frequency %>
     <%= f.submit "提交", class: "btn btn-large btn-primary" %>
     <% end %>
-
-
+  </div>
+</div>
 <script type="text/javascript">
   $('.form_datetime').datetimepicker({
     language:  'zh-CN',
