app callback first

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,7 @@
       </div>
       <div id="primary" class="sidebar alpha grid_5 pull_10">
         <ul class="">
-          <li id="search-3" class="widget widget_search"><div class="widgetblock">
-          </li>
+          <li id="search-3" class="widget widget_search"><div class="widgetblock" />
 
           <%= render "shared/ad_homepage" %>
 
