--- a/app/views/admin/redpack_times/_form.html.erb
+++ b/app/views/admin/redpack_times/_form.html.erb
@@ -33,6 +33,10 @@
     <%= f.text_field :store %>
     <%= f.label :state %>
     <%= f.text_field :state %>
+    <%= f.label :person_num %>
+    <%= f.text_field :person_num %>
+    <%= f.label :amount %>
+    <%= f.text_field :amount %>
     <%= f.label :probability %>
     <%= f.text_field :probability %>
     <%= f.label :frequency %>
