--- a/app/views/admin/card_options/_form.html.erb
+++ b/app/views/admin/card_options/_form.html.erb
@@ -9,6 +9,9 @@
 
     <%= f.label :img %>
     <%= f.text_field :img %>
+ 
+    <%= f.label :value %>
+    <%= f.text_field :value %>
 
     <%= f.label :store %>
     <%= f.text_field :store %>
