--- a/app/views/admin/ibeacons/index.html.erb
+++ b/app/views/admin/ibeacons/index.html.erb
@@ -25,7 +25,7 @@
     <td><%= ibeacon.url %></td>
     <td><%= ibeacon.provider %></td>
     <td><%= ibeacon.uid %></td>
-    <td><%= link_to "Edit", edit_admin_ibeacon_path(ibeacon) %> | <%= link_to "delete", admin_ibeacon_path(ibeacon), :method => :delete, confirm: "确认删除?" %></td>
+    <td><%= link_to 'clone', [:clone,:admin, ibeacon], data: {confirm: "Are you clone one !"} %> | <%= link_to "Edit", edit_admin_ibeacon_path(ibeacon) %> | <%= link_to "delete", admin_ibeacon_path(ibeacon), :method => :delete, confirm: "确认删除?" %></td>
   </tr>
   <% end %>
 </table>
