--- a/app/views/admin/bgames/index.html.erb
+++ b/app/views/admin/bgames/index.html.erb
@@ -18,7 +18,7 @@
     <td><%= bgame.game_name %></td>
     <td><%= bgame.remark %></td>
     <td><%= bgame.state %></td>
-    <td><%= link_to "Edit", edit_admin_bgame_path(bgame) %> | <%= link_to "delete", admin_bgame_path(bgame), :method => :delete, confirm: "确认删除?" %></td>
+    <td>  <%= link_to '克隆', [:clone,:admin, bgame], data: {confirm: "Are you clone one !"} %> |  <%= link_to "Edit", edit_admin_bgame_path(bgame) %> | <%= link_to "delete", admin_bgame_path(bgame), :method => :delete, confirm: "确认删除?" %></td>
   </tr>
   <% end %>
 </table>
