--- a/app/views/admin/cards/index.html.erb
+++ b/app/views/admin/cards/index.html.erb
@@ -28,7 +28,7 @@
     <td><%= card.cardid %></td>
     <td><%= card.start_date %></td>
     <td><%= card.end_date %></td>
-    <td><%= link_to "Edit", edit_admin_card_path(card) %> | <%= link_to "delete", admin_card_path(card), :method => :delete, confirm: "确认删除?" %></td>
+    <td>  <%= link_to '克隆', [:clone,:admin,card], data: {confirm: "Are you clone one !"} %> | <%= link_to "Edit", edit_admin_card_path(card) %> | <%= link_to "delete", admin_card_path(card), :method => :delete, confirm: "确认删除?" %></td>
   </tr>
   <% end %>
 </table>
