--- a/app/views/admin/redpacks/index.html.erb
+++ b/app/views/admin/redpacks/index.html.erb
@@ -28,7 +28,7 @@
     <td><%= redpack.max %></td>
     <td><%= redpack.suc_url %></td>
     <td><%= redpack.fail_url %></td>
-    <td><%= link_to "Edit", edit_admin_redpack_path(redpack) %> | <%= link_to "delete", admin_redpack_path(redpack), :method => :delete, confirm: "确认删除?" %></td>
+    <td>  <%= link_to '克隆', [:clone,:admin, redpack], data: {confirm: "Are you clone one !"} %> | <%= link_to "Edit", edit_admin_redpack_path(redpack) %> | <%= link_to "delete", admin_redpack_path(redpack), :method => :delete, confirm: "确认删除?" %></td>
   </tr>
   <% end %>
 </table>
