enable send redpack

--- a/app/views/admin/merchants/_form.html.erb
+++ b/app/views/admin/merchants/_form.html.erb
@@ -66,7 +66,7 @@
     <div class="control-group">
       <label class="control-label">rsa_key</label>
       <div class="controls">
-        <%= f.text_field :wxappid %>
+        <%= f.text_field :rsa_key %>
       </div>
     </div>
 
