--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>疯狂摇一摇</title>
     <%= favicon_link_tag 'shangjieba-icon.png' %>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="keywords" content="摇一摇">
     <meta name="description" content="摇一摇"> 
     <meta name="baidu-tc-cerfication" content="172a854e4a368f1373c63b8533a823c9" />
