--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -6,6 +6,7 @@
     <th>ID</th>
     <th>name</th>
     <th>ibeacon</th>
+    <th>merchant name</th>
     <th>user</th>
     <th>State</th>
     <th>mch_id</th>
@@ -24,6 +25,7 @@
     <td><%= merchant.id %></td>
     <td><%= merchant.name %></td>
     <td><%= merchant.beacon_name %></td>
+    <td><%= merchant.merchant_name %></td>
     <td><%= merchant.user_name %></td>
     <td><%= merchant.state %></td>
     <td><%= merchant.mch_id %></td>
