--- a/app/views/wx_third_auth/authpage.html.erb
+++ b/app/views/wx_third_auth/authpage.html.erb
@@ -1,2 +1,53 @@
-<h1>auth page</h1>
-<a href="http://www.dapeimishu.com/dothirdauth">授权</a>
+<!--<h1>auth page</h1>-->
+<!--<a href="http://www.dapeimishu.com/dothirdauth">授权</a>-->
+
+<!DOCTYPE html>
+<html>
+<head lang="en">
+  <meta charset="UTF-8">
+  <title>摇一摇</title>
+  <style>
+      body{
+          background:rgba(170,170,170,0.1);
+
+
+      }
+      #x1 { width:300px;height:400px;
+          left:37%;top:110px;background:#fff;
+          filter:Alpha(opacity=60);
+          box-shadow:10px 20px 30px ;
+      rgba(190,190,190,0.4);
+          position:relative;}
+      #x1 .x2{
+          position:absolute;
+          left:25px;top:300px;
+      }
+      .x3{
+          position:absolute;
+          left:25px;top:180px;
+          width: 250px;height:100px;
+          font-family:monospace;
+          font-size: 15px;
+      }
+      .x4{
+          position:absolute;
+          left:80px;top:10px;
+          diplay:block;
+      }
+
+  </style>
+</head>
+<body>
+<div id="x1">
+  <div class="x2">
+    <a href="http://www.dapeimishu.com/dothirdauth"><img src="http://wx.51self.com/uploads/sucai/1430819335835.png"></a>
+  </div>
+  <div><p class="x3">疯狂摇一摇是一个提供营销解决方案及数据服务的平台,我们致力于通过微信摇一摇附近功能,为服装，餐饮，交通等传统行业提供O2O解决方案以及数据服务。
+  如:会议签到、会议日程、实时投票、抽奖和会议上墙等。</p></div>
+  <div class="x4">
+    <img src="http://wx.51self.com/uploads/sucai/1430819335199.png">
+  </div>
+</div>
+
+</body>
+</html>
