--- a/app/views/admin/redpacks/_form.html.erb
+++ b/app/views/admin/redpacks/_form.html.erb
@@ -58,6 +58,23 @@
   </div>
 </div>
 
+
+
+<div class="control-group">
+  <label class="control-label">min</label>
+  <div class="controls">
+    <%= f.text_field :min %>
+  </div>
+</div>
+
+
+<div class="control-group">
+  <label class="control-label">max</label>
+  <div class="controls">
+    <%= f.text_field :max %>
+  </div>
+</div>
+
 <div class="control-group">
   <label class="control-label">State</label>
   <div class="controls">
