--- a/app/views/wx_third_auth/authpage.html.erb
+++ b/app/views/wx_third_auth/authpage.html.erb
@@ -40,7 +40,7 @@
 <body>
 <div id="x1">
   <div class="x2">
-    <a href="http://www.dapeimishu.com/dothirdauth"><img src="http://wx.51self.com/uploads/sucai/1430819335835.png"></a>
+    <a href="http://<%= WX_DOMAIN %>/dothirdauth"><img src="http://wx.51self.com/uploads/sucai/1430819335835.png"></a>
   </div>
   <div><p class="x3">疯狂摇一摇是一个提供营销解决方案及数据服务的平台,我们致力于通过微信摇一摇附近功能,为服装，餐饮，交通等传统行业提供O2O解决方案以及数据服务。
   如:会议签到、会议日程、实时投票、抽奖和会议上墙等。</p></div>
