--- a/app/views/admin/scores/index.html.erb
+++ b/app/views/admin/scores/index.html.erb
@@ -7,6 +7,7 @@
     <th>ibeacon </th>
     <th>user name</th>
     <th>app name</th>
+    <th>from user name</th>
     <th>score</th>
     <th>remark</th>
     <th>created at
@@ -18,6 +19,7 @@
     <td><%= link_to r.beacon_name, "/admin/scores?beaconid=#{r.beaconid}" %></td>
     <td><%= link_to r.user_name, "/admin/scores?user_id=#{r.user_id}" %></td>
     <td><%= link_to r.app_name, "/admin/scores?game_id=#{r.game_id}" %></td>
+     <td><%= r.from_user_name %></td>
     <td><%= r.value %></td>
     <td><%= r.remark %></td>
      <td><%= r.created_at %></td>
