--- a/app/views/admin/redpack_times/_form.html.erb
+++ b/app/views/admin/redpack_times/_form.html.erb
@@ -18,7 +18,7 @@
     <div class="control-group">
       <label class="control-label">end_time</label>
       <div class="controls input-append date form_datetime"  data-date-format="yyyy-mm-dd hh:ii:ss" data-link-field="dtp_input2">
-
+placeholder="Amount"
         <%= f.text_field :end_time %>
         <span class="add-on"><i class="icon-remove"></i></span>
         <span class="add-on"><i class="icon-th"></i></span>
@@ -29,18 +29,20 @@
     <%= f.text_field :min %>
     <%= f.label :max %>
     <%= f.text_field :max %>
+    <%= f.label :average %>
+    <%= f.text_field :average %>
     <%= f.label :store %>
     <%= f.text_field :store %>
+    <%= f.label :amount %> 
+    <%= f.text_field :amount , placeholder: "average*store"%>
     <%= f.label :state %>
     <%= f.text_field :state %>
     <%= f.label :person_num %>
     <%= f.text_field :person_num %>
-    <%= f.label :amount %>
-    <%= f.text_field :amount %>
-    <%= f.label :probability %>
-    <%= f.text_field :probability %>
     <%= f.label :frequency %>
     <%= f.text_field :frequency %>
+    <%= f.label :probability %>
+    <%= f.text_field :probability %>
     <%= f.submit "提交", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
