--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,6 +3,7 @@
     <tr class="well">
       <th>ID</th>
       <th>名字</th>
+      <th>openid</th>
       <th>活动</th>
       <th>积分</th>
       <th width="17%">创建时间</th>
@@ -14,6 +15,7 @@
       <tr>
         <td><%= u.id %></td>
         <td><%= u.name %></td>
+        <td><%= u.get_openid %></td>
         <td><%= link_to '活动', "/admin/records?user_id=#{u.id}" %></td>
         <td><%= link_to '积分', "/admin/scores?user_id=#{u.id}"%></td>
         <td><%= u.created_at.to_local %></td>
