--- a/app/views/weitest/o2o.html.erb
+++ b/app/views/weitest/o2o.html.erb
@@ -244,8 +244,8 @@ share_api();
     <%= render :partial=>"shared/report", :locals=>{:type=>"pv", :cid=>@category.id, :gid=>@material.id } %>
 
     <script>
-      ajax = new XMLHttpRequest();
-      ajax.open('GET', '/weitest/report?beaconid=<%= params[:beaconid] %>&game_id=<%= @material.id %>&remark=到此一游', true);
-      ajax.send(null);          
+      var url="/weitest/report?beaconid=<%= params[:beaconid] %>&game_id=<%= @material.id %>&remark=浏览"
+      var img = new Image();
+      img.src = url;
     </script>
 </html>
