--- a/app/views/weitest/o2o.html.erb
+++ b/app/views/weitest/o2o.html.erb
@@ -79,7 +79,7 @@ function share_api(){
       success: function () {
         share_callback_pyq();
         <% if @category.game_type_id >= 13  %> 
-          location.href = "<%= @material.wx_ln %> ";
+        //  location.href = "<%= @material.wx_ln %> ";
         <% end %> 
         // 用户确认分享后执行的回调函数
       },
@@ -98,7 +98,7 @@ function share_api(){
       success: function () {
         share_callback_hy();
          <% if @category.game_type_id >= 13  %> 
-          location.href = "<%= @material.wx_ln %> ";
+         // location.href = "<%= @material.wx_ln %> ";
          <% end %>
         // 用户确认分享后执行的回调函数
       },
