--- a/app/views/weitest/show.html.erb
+++ b/app/views/weitest/show.html.erb
@@ -30,11 +30,10 @@
       <script type="text/javascript">
         <%= ERB.new(@category.js).result(binding).html_safe %>
       </script>
-      <% unless  @category.use_wxjs %>
-        <script type="text/javascript">
-          <%= ERB.new(@base_category.wx_js || "").result(binding).html_safe %>
-        </script>
-      <% end %>
+      <script type="text/javascript">
+          <%= ERB.new(@category.wx_js || "").result(binding).html_safe %>
+      </script>
+      
       <style type="text/css">
         <% @css_image   = @material.images.select{|i| i.state == 1 }[0].try(:body) %>
         <% @css_image_2 = @material.images.select{|i| i.state == 10}[0].try(:body) %>
