--- a/app/views/weitest/o2o.html.erb
+++ b/app/views/weitest/o2o.html.erb
@@ -222,7 +222,7 @@ share_api();
     <%= render :partial=>"shared/report", :locals=>{:type=>"pv", :cid=>@category.id, :gid=>@material.id } %>
 
     <script>
-      var url="/weitest/report?beaconid=<%= params[:beaconid] %>&game_id=<%= @material.id %>&remark=浏览"
+      var url="/weitest/uv?beaconid=<%= params[:beaconid] %>&game_id=<%= @material.id %>&remark=浏览"
       var img = new Image();
       img.src = url;
     </script>
