--- a/app/views/admin/scores/index.html.erb
+++ b/app/views/admin/scores/index.html.erb
@@ -10,6 +10,7 @@
     <th>from user name</th>
     <th>score</th>
     <th>remark</th>
+    <th>state</th>
     <th>created at
   </tr>
 
@@ -19,10 +20,11 @@
     <td><%= link_to r.beacon_name, "/admin/scores?beaconid=#{r.beaconid}" %></td>
     <td><%= link_to r.user_name, "/admin/scores?user_id=#{r.user_id}" %></td>
     <td><%= link_to r.app_name, "/admin/scores?game_id=#{r.game_id}" %></td>
-     <td><%= r.from_user_name %></td>
+    <td><%= r.from_user_name %></td>
     <td><%= r.value %></td>
     <td><%= r.remark %></td>
-     <td><%= r.created_at %></td>
+    <td><%= r.state %></td>
+    <td><%= r.created_at %></td>
   </tr>
   <% end %>
 </table>
