--- a/app/views/admin/redpack_values/_form.html.erb
+++ b/app/views/admin/redpack_values/_form.html.erb
@@ -6,6 +6,8 @@
 
     <%= f.label :money %>
     <%= f.text_field :money %>
+    <%= f.label :num %>
+    <%= f.text_field :num %>
     <%= f.submit "提交", class: "btn btn-large btn-primary" %>
     <% end %>
 </div>
