--- a/app/views/weitest/o2o.html.erb
+++ b/app/views/weitest/o2o.html.erb
@@ -37,7 +37,7 @@
 <script src='http://res.wx.qq.com/open/js/jweixin-1.0.0.js' type='text/javascript'></script>
 <script>
   wx.config({
-    debug: true,
+    debug: false,
     appId: "<%= sign_package['appId'] %>",
     timestamp: <%= sign_package['timestamp'] %>,
     nonceStr:  "<%= sign_package['nonceStr'] %>",
