add hide pyq option

--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -104,6 +104,12 @@
       </div>
     </div>
 
+    <div class="control-group">
+      <label class="control-label">隐藏朋友圈</label>
+      <div class="controls">
+        <%= f.check_box :hide_pyq %>
+      </div>
+    </div>
 
   <div class="form-actions" style="margin-bottom:0px">
     <%= f.submit '提交', class: 'btn btn-primary', id: "tixing" %>
