--- a/app/views/weitest/o2o.html.erb
+++ b/app/views/weitest/o2o.html.erb
@@ -33,7 +33,7 @@
  </head>
 
 
-<% sign_package = $wxclient.get_jssign_package(request.url) %>
+<% sign_package = $wxclient.get_jssign_package( fix_slb(request.url) ) %>
 <script src='http://res.wx.qq.com/open/js/jweixin-1.0.0.js' type='text/javascript'></script>
 <script>
   wx.config({
