--- a/app/views/admin/records/index.html.erb
+++ b/app/views/admin/records/index.html.erb
@@ -6,6 +6,7 @@
     <th>ID</th>
     <th>ibeacon </th>
     <th>user name</th>
+    <th>user img</th>
     <th>app name</th>
     <th>qr</th>
     <th>score</th>
@@ -22,6 +23,7 @@
     <td><%= r.id %></td>
     <td><%= link_to r.beacon_name, "/admin/records?beaconid=#{r.beaconid}" %></td>
     <td><%= link_to r.user_name, "/admin/records?user_id=#{r.user_id}" %></td>
+    <td><img src='<%= r.user_img %>' width='100px;'></td>
     <td><%= link_to r.app_name, "/admin/records?game_id=#{r.game_id}" %></td>
     <td><img src="<%= r.get_qr_img %>" width='100px'></td>
     <td><%= r.score %></td>
