--- a/app/views/admin/records/index.html.erb
+++ b/app/views/admin/records/index.html.erb
@@ -9,6 +9,7 @@
     <th>user img</th>
     <th>app name</th>
     <th>qr</th>
+    <th>from user</th>
     <th>score</th>
     <th>allocation</th>
     <th>remark</th>
@@ -26,6 +27,7 @@
     <td><img src='<%= r.user_img %>' width='100px;'></td>
     <td><%= link_to r.app_name, "/admin/records?game_id=#{r.game_id}" %></td>
     <td><img src="<%= r.get_qr_img %>" width='100px'></td>
+    <td><%= r.from_user_name %></td>
     <td><%= r.score %></td>
     <td><%= r.allocation%></td>
     <td><%= r.remark %></td>
