--- a/app/views/weitest/o2o.html.erb
+++ b/app/views/weitest/o2o.html.erb
@@ -135,6 +135,7 @@ share_api();
 <a id="game9g9gstart" class="game9g9gstart pulse infinite"></a>
 <div id="game9gmenu" class="game9gmenu">
 <ul>
+  <li><img src="http://wx.51self.com/img/menu/icon_05.png"><a href='/wshows/29?beaconid=<%=@beacon.url %>&game_id=<%= @material.id%>'>好友排行</a></li>
   <li><img src="http://wx.51self.com/img/menu/icon_03.png"><a href='/wshows/27?beaconid=<%=@beacon.url %>&game_id=<%= @material.id%>'>今日排行版</a></li>
   <!--
   <li><img src="http://wx.51self.com/img/menu/icon_04.png"><a href='/wshows/7?beaconid=<%= @beacon.url %>&game_id=<%= @material.id%>'><%= @beacon.name %>动态</a></li>
